[package]
name = "split-char-from-str"
version = "0.0.0"
description = "A small utility to split a string into the first or last character (type `char`) and the rest (type `&str`)"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/split-char-from-str"
repository = "https://github.com/KSXGitHub/split-char-from-str.git"
keywords = [
  "split",
  "first",
  "last",
  "character",
]
categories = [
  "no-std",
  "parsing",
  "text-processing",
]
edition = "2021"
include = [
  "/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "split_char_from_str"
path = "lib.rs"
