[package]
name = "split-first-char"
version = "2.0.1"
description = "This crate is DEPRECATED, use split-char-from-str instead"
authors = ["khai96_ <hvksmr1996@gmail.com>"]
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/split-first-char"
repository = "https://github.com/KSXGitHub/split-first-char.git"
keywords = [
  "first",
  "character",
]
categories = [
  "no-std",
  "parsing",
  "text-processing",
]
edition = "2021"
include = [
  "/*.rs",
  "/Cargo.toml",
  "/README.md",
  "/LICENSE.md",
]

[lib]
name = "split_first_char"
path = "lib.rs"
